--- a/Mandatum/UI/Views/Home/Index.cshtml
+++ b/Mandatum/UI/Views/Home/Index.cshtml
@@ -1,8 +1,31 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<!DOCTYPE HTML>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<html>
+
+<header>
+	<section class="wrapper">
+		<!-- Logo -->
+	
+			<div id="logo">
+            	<h1>Mandatum</h1>
+            	<p>Сделайте командную работу удобной</p>
+            </div>
+
+	</section>
+</header>
+
+<body class="no-sidebar is-preload">
+		<div id="page-wrapper">
+			<!-- Main -->
+			<div id="main" class="wrapper style2">
+				<div class="row aln-center">
+                    <div class="actions">
+                        <a href="#" class="button style1">Начать</a>
+                    </div>
+                </div>
+			</div>
+			
+			
+		</div>
+	</body>
+</html>
