--- a/Mandatum/UI/Views/Shared/HeaderPartial.cshtml
+++ b/Mandatum/UI/Views/Shared/HeaderPartial.cshtml
@@ -1,38 +1,13 @@
 ﻿<!-- Header -->
 <section id="header" class="wrapper">
 
-    <!-- Logo -->
-    <div id="logo">
-        <h1><a href="index.html">Escape Velocity</a></h1>
-        <p>A free responsive site template by HTML5 UP</p>
-    </div>
 
     <!-- Nav -->
     <nav id="nav">
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li>
-                <a href="#">Dropdown</a>
-                <ul>
-                    <li><a href="#">Lorem ipsum</a></li>
-                    <li><a href="#">Magna veroeros</a></li>
-                    <li><a href="#">Etiam nisl</a></li>
-                    <li>
-                        <a href="#">Sed consequat</a>
-                        <ul>
-                            <li><a href="#">Lorem dolor</a></li>
-                            <li><a href="#">Amet consequat</a></li>
-                            <li><a href="#">Magna phasellus</a></li>
-                            <li><a href="#">Etiam nisl</a></li>
-                            <li><a href="#">Sed feugiat</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Nisl tempus</a></li>
-                </ul>
-            </li>
-            <li><a href="left-sidebar.html">Left Sidebar</a></li>
-            <li><a href="right-sidebar.html">Right Sidebar</a></li>
-            <li class="current"><a href="no-sidebar.html">No Sidebar</a></li>
+            <li><a href="@Url.Action("AllBoards", "Home")">Все доски</a></li>
+            <li><a href="@Url.Action("CreateBoard", "Home")">Создать доску</a></li>
+            <li><a href="index.html">Профиль</a></li> 
         </ul>
     </nav>
 
