--- a/Mandatum/UI/Views/Home/Index.cshtml
+++ b/Mandatum/UI/Views/Home/Index.cshtml
@@ -5,8 +5,7 @@
 <header>
 	<section class="wrapper">
 		<!-- Logo -->
-	
-			<div id="logo">
+		<div id="logo">
             	<h1>Mandatum</h1>
             	<p>Сделайте командную работу удобной</p>
             </div>
@@ -20,7 +19,7 @@
 			<div id="main" class="wrapper style2">
 				<div class="row aln-center">
                     <div class="actions">
-                        <a href="#" class="button style1">Начать</a>
+                        <a href="@Url.Action("Login", "Account")" class="button style1">Начать</a>
                     </div>
                 </div>
 			</div>
