--- a/Mandatum/UI/Views/Shared/HeaderPartial.cshtml
+++ b/Mandatum/UI/Views/Shared/HeaderPartial.cshtml
@@ -7,7 +7,7 @@
         <ul>
             <li><a href="@Url.Action("AllBoards", "Home")">Все доски</a></li>
             <li><a href="@Url.Action("CreateBoard", "Home")">Создать доску</a></li>
-            <li><a href="index.html">Профиль</a></li> 
+            <li> <a href="@Url.Action("Login", "Account")">Профиль</a></li> 
         </ul>
     </nav>
 
