create board page

--- a/Mandatum/UI/Views/Home/CreateBoard.cshtml
+++ b/Mandatum/UI/Views/Home/CreateBoard.cshtml
@@ -1,28 +1,48 @@
 ﻿<!DOCTYPE HTML>
 
 
-<div>
-<input type="radio" name="type" id="private" checked> <label for="private">Приватная</label>
-</div>
+	<div id="page-wrapper">
+      <div id="main" class="wrapper style2">
+	      <div class="row aln-center">
+		      <div>
+			      <input type="radio" name="type" id="private" checked> <label for="private">Приватная</label>
+		      </div>
+	      </div>
 
-<div>
-<input type="radio" name="type" id="public"> <label for="public">Публичная</label>
-</div>
+	      <div class="row aln-center">
+	              <div>
+		              <input type="radio" name="type" id="public"> <label for="public">Публичная</label>
+	              </div>
+			</div>	
+	      <div class="row aln-center">
+		      <h3>Формат</h3>
+	      </div>
+	      <div class="row aln-center">
+		      <div>
+			      <input type="radio" name="format" id="kanban" checked> <label for="kanban">Канбан-доска</label>
+		      </div>
+	      </div>
+	      <div class="row aln-center">
+		      <div>  
+			      <input type="radio" name="format" id="graph"> <label for="graph">Граф</label>
+		      </div>
+		      </div>
+              <div class="row aln-center">
+              <div class="actions">
+                    <a href="#" class="button style1">Готово</a>
+              </div>
+          </div>
+		  </div>
+	</div>
 
-<label>Формат</label>
-
-<div>
-  <input type="radio" name="format" id="kanban" checked> <label for="kanban">Канбан-доска</label>
-</div>
-<div>  
-  <input type="radio" name="format" id="graph"> <label for="graph">Граф</label>
-</div>
 
 
-<div id="main" class="wrapper style2">
-  <div class="row aln-left">
-    <div class="actions">
-      <a href="#" class="button style1">Готово</a>
-    </div>
-  </div>
-</div>
+
+@* *@
+@* <div id="main" class="wrapper style2"> *@
+@*   <div class="row aln-left"> *@
+@*     <div class="actions"> *@
+@*       <a href="#" class="button style1">Готово</a> *@
+@*     </div> *@
+@*   </div> *@
+@* </div> *@
