--- a/Mandatum/UI/Views/Home/CreateBoard.cshtml
+++ b/Mandatum/UI/Views/Home/CreateBoard.cshtml
@@ -1,48 +1,58 @@
 ﻿<!DOCTYPE HTML>
 
+<div id="page-wrapper">
+	
+	<section id="header" class="wrapper">
+		@await Html.PartialAsync("NavBarPartial")
+	</section>
 
-	<div id="page-wrapper">
-      <div id="main" class="wrapper style2">
-	      <div class="row aln-center">
-		      <div>
-			      <input type="radio" name="type" id="private" checked> <label for="private">Приватная</label>
-		      </div>
-	      </div>
+	<section id="main" class="wrapper style2">
+		<div class="title">Новая доска</div>
+		<div class="row aln-center">
+			<div>
+				<input type="radio" name="type" id="private" checked>
+				<label for="private">Приватная</label>
+			</div>
+		</div>
 
-	      <div class="row aln-center">
-	              <div>
-		              <input type="radio" name="type" id="public"> <label for="public">Публичная</label>
-	              </div>
-			</div>	
-	      <div class="row aln-center">
-		      <h3>Формат</h3>
-	      </div>
-	      <div class="row aln-center">
-		      <div>
-			      <input type="radio" name="format" id="kanban" checked> <label for="kanban">Канбан-доска</label>
-		      </div>
-	      </div>
-	      <div class="row aln-center">
-		      <div>  
-			      <input type="radio" name="format" id="graph"> <label for="graph">Граф</label>
-		      </div>
-		      </div>
-              <div class="row aln-center">
-              <div class="actions">
-                    <a href="#" class="button style1">Готово</a>
-              </div>
-          </div>
-		  </div>
-	</div>
-
-
-
-
-@* *@
-@* <div id="main" class="wrapper style2"> *@
-@*   <div class="row aln-left"> *@
-@*     <div class="actions"> *@
-@*       <a href="#" class="button style1">Готово</a> *@
-@*     </div> *@
-@*   </div> *@
-@* </div> *@
+		<div class="row aln-center">
+			<div>
+				<input type="radio" name="type" id="public">
+				<label for="public">Публичная</label>
+			</div>
+		</div>
+		
+		<section id="highlights" class="wrapper style2">
+			<div class="container">
+				<div class="row aln-center">
+					<div class="col-4 col-12-medium">
+						<section class="highlight">
+							<a class="image featured"><img src="/css/images/pic02.jpg" alt="Канбан доска"/></a>
+                            	<div>
+                            		<input type="radio" name="format" id="kanban" checked>
+                            		<label for="kanban">Канбан доска</label>
+                            	</div>
+						</section>
+					</div>
+					<div class="col-4 col-12-medium">
+						<section class="highlight">
+							<a class="image featured"><img src="/css/images/pic03.jpg" alt="Граф"/></a>
+                            	<div>
+                            		<input type="radio" name="format" id="graph">
+                            		<label for="graph">Граф</label>
+                            	</div>
+						</section>
+					</div>
+				</div>
+			</div>
+		</section>
+		
+		<div class="row aln-center">
+        	<div class="actions">
+        		<a href="#" class="button style1">Создать доску</a>
+        	</div>
+        </div>
+	</section>
+	
+	
+</div>
