--- a/Mandatum/UI/Views/Home/Index.cshtml
+++ b/Mandatum/UI/Views/Home/Index.cshtml
@@ -1,30 +1,22 @@
 ﻿<!DOCTYPE HTML>
 
-<html>
+<div id="page-wrapper">
+    <section id="header" class="wrapper">
+        <div id="logo">
+                <h1>Mandatum</h1>
+                <p>Сделайте командную работу удобной</p>
+        </div>
+        
+        @await Html.PartialAsync("NavBarPartial")
+    </section>
 
-<header>
-	<section class="wrapper">
-		<!-- Logo -->
-		<div id="logo">
-            	<h1>Mandatum</h1>
-            	<p>Сделайте командную работу удобной</p>
+    
+    <div id="main" class="wrapper style2">
+        <div class="row aln-center">
+            <div class="actions">
+                <a href="@Url.Action("Login", "Account")" class="button style1">Начать</a>
             </div>
+        </div>
+    </div>
+</div>
 
-	</section>
-</header>
-
-<body class="no-sidebar is-preload">
-		<div id="page-wrapper">
-			<!-- Main -->
-			<div id="main" class="wrapper style2">
-				<div class="row aln-center">
-                    <div class="actions">
-                        <a href="@Url.Action("Login", "Account")" class="button style1">Начать</a>
-                    </div>
-                </div>
-			</div>
-			
-			
-		</div>
-	</body>
-</html>
