--- a/Mandatum/UI/Views/Home/CreateBoard.cshtml
+++ b/Mandatum/UI/Views/Home/CreateBoard.cshtml
@@ -27,7 +27,7 @@
 				<div class="row aln-center">
 					<div class="col-4 col-12-medium">
 						<section class="highlight">
-							<a class="image featured"><img src="/css/images/pic02.jpg" alt="Канбан доска"/></a>
+							<a class="image featured"><img src="/images/kanban.png" alt="Канбан доска"/></a>
                             	<div>
                             		<input type="radio" name="format" id="kanban" checked>
                             		<label for="kanban">Канбан доска</label>
@@ -36,7 +36,7 @@
 					</div>
 					<div class="col-4 col-12-medium">
 						<section class="highlight">
-							<a class="image featured"><img src="/css/images/pic03.jpg" alt="Граф"/></a>
+							<a class="image featured"><img src="/images/graph.png" alt="Граф"/></a>
                             	<div>
                             		<input type="radio" name="format" id="graph">
                             		<label for="graph">Граф</label>
