--- a/Mandatum/UI/Views/Account/Login.cshtml
+++ b/Mandatum/UI/Views/Account/Login.cshtml
@@ -5,29 +5,47 @@
     <section id="header" class="wrapper">
         @await Html.PartialAsync("NavBarPartial")
     </section>
+    
     <section id="main" class="wrapper style2">
         <div class="title">Вход</div>
-         <a asp-action="Register" asp-controller="Account">Регистрация</a>
-    
-        <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
-            <div class="validation" asp-validation-summary="ModelOnly"></div>
-            <div>
-                <div class="form-group">
-                    <label asp-for="Email">Введите Email</label>
-                    <input type="text" asp-for="Email" />
-                    <span asp-validation-for="Email" />
-                </div>
-                <div class="form-group">
-                    <label asp-for="Password">Введите пароль</label>
-                    <input asp-for="Password" />
-                    <span asp-validation-for="Password" />
-                </div>
-                <div class="form-group">
-                   
-                    <input type="submit" value="Войти" class="btn btn-outline-dark"/>
-                </div>
+        
+        <div class="container">
+            <div class="row aln-center">
+                
+                <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
+                    <div class="validation" asp-validation-summary="ModelOnly"></div>
+                    <div>
+                        <div class="form-group">
+                            <label asp-for="Email">Введите Email</label>
+                            <input type="text" asp-for="Email"/>
+                            <span asp-validation-for="Email"/>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Password">Введите пароль</label>
+                            <input asp-for="Password"/>
+                            <span asp-validation-for="Password"/>
+                        </div>
+                    </div>
+                </form>
             </div>
-        </form>
+            <div class="row aln-center">
+                  <div class="form-group">
+                        <input type="submit" value="Войти" class="btn btn-outline-dark"/>
+                    </div>
+            </div>
+            <div class="row aln-center">
+                <label>или</label>
+            </div>
+            <div class="row aln-center">
+                <a asp-action="Register" asp-controller="Account">Зарегестрироваться</a>
+            </div>
+        </div>
+
+
+        
+
+
+
     </section>
     
 </div>
