--- a/Mandatum/UI/Views/Account/Register.cshtml
+++ b/Mandatum/UI/Views/Account/Register.cshtml
@@ -1,27 +1,44 @@
 ﻿@model Mandatum.ViewModels.RegisterModel
  
-<h2>Регистрация</h2>
- 
-<form asp-action="Register" asp-controller="Account" asp-anti-forgery="true">
-    <div class="validation" asp-validation-summary="ModelOnly"></div>
-    <div>
-        <div>
-            <label asp-for="Email">Введите Email</label><br />
-            <input type="text" asp-for="Email" />
-            <span asp-validation-for="Email" />
+
+<div id="page-wrapper">
+    <section id="header" class="wrapper">
+        @await Html.PartialAsync("NavBarPartial")
+    </section>
+    
+    <section id="main" class="wrapper style2">
+        <div class="title">Регистрация</div>
+        
+        <div class="container">
+            <div class="row aln-center">
+                <form asp-action="Register" asp-controller="Account" asp-anti-forgery="true">
+                    <div class="validation" asp-validation-summary="ModelOnly"></div>
+                    <div>
+                        <div class="form-group">
+                            <label asp-for="Email">Введите Email</label>
+                            <input type="text" asp-for="Email"/>
+                            <span asp-validation-for="Email"/>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Password">Введите пароль</label>
+                            <input asp-for="Password"/>
+                            <span asp-validation-for="Password"/>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="ConfirmPassword">Повторите пароль</label>
+                            <input asp-for="ConfirmPassword"/>
+                            <span asp-validation-for="ConfirmPassword"/>
+                        </div>
+                    </div>
+                </form>
+            </div>
+   
+            <div class="row aln-center">
+                <div class="form-group">
+                    <input type="submit" value="Зарегистрироваться" class="btn btn-outline-dark"/>
+                </div>
+            </div>
         </div>
-        <div>
-            <label asp-for="Password">Введите пароль</label><br />
-            <input asp-for="Password" />
-            <span asp-validation-for="Password" />
-        </div>
-        <div>
-            <label asp-for="ConfirmPassword">Повторите пароль</label><br />
-            <input asp-for="ConfirmPassword" />
-            <span asp-validation-for="ConfirmPassword" />
-        </div>
-        <div>
-            <input type="submit" value="Регистрация" />
-        </div>
-    </div>
-</form>
+    </section>
+</div>
+
