--- a/Mandatum/UI/Views/Account/Login.cshtml
+++ b/Mandatum/UI/Views/Account/Login.cshtml
@@ -10,10 +10,10 @@
         <div class="title">Вход</div>
         
         <div class="container">
-        <div class="row aln-center">
+            <div class="row aln-center">
                 
-            <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
-                <div class="validation" asp-validation-summary="ModelOnly"></div>
+                <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
+                    <div class="validation" asp-validation-summary="ModelOnly"></div>
                 <div>
                     <div class="form-group">
                         <label asp-for="Email">Введите Email</label>
@@ -25,33 +25,17 @@
                         <input asp-for="Password"/>
                         <span asp-validation-for="Password"/>
                     </div>
-                    <div class="row aln-center">
-                        <div class="form-group">
-                            <input type="submit" value="Войти" class="btn btn-outline-dark"/>
-                        </div>
+                    <div>
+                        <label> </label>
+                        <input type="submit" value="Войти в аккаунт" class="btn btn-outline-dark"/>
                     </div>
-                    <div class="row aln-center">
                         <label>или</label>
+                        <a asp-action="Register" asp-controller="Account">Зарегестрироваться</a>
                     </div>
-                    <div class="form-group">
-                        <div class="row aln-center">
-                            <a asp-action="Register" asp-controller="Account">Зарегестрироваться</a>
-                        </div>
-                    </div>
-                </div>
-                     
-                    
-            </form>
+                </form>
+            </div>
         </div>
-        </div>
-
-
-        
-
-
-
     </section>
-    
 </div>
 
 
