--- a/Mandatum/UI/Views/Account/Register.cshtml
+++ b/Mandatum/UI/Views/Account/Register.cshtml
@@ -29,11 +29,10 @@
                             <input asp-for="ConfirmPassword"/>
                             <span asp-validation-for="ConfirmPassword"/>
                         </div>
-                         <div class="row aln-center">
-                                        <div class="form-group">
-                                            <input type="submit" value="Зарегистрироваться" class="btn btn-outline-dark"/>
-                                        </div>
-                                    </div>
+                        <div>
+                            <label></label>
+                            <input type="submit" value="Зарегистрироваться" class="btn btn-outline-dark"/>
+                        </div>
                     </div>
                 </form>
             </div>
