--- a/Mandatum/UI/Views/Board/NewBoard.cshtml
+++ b/Mandatum/UI/Views/Board/NewBoard.cshtml
@@ -6,10 +6,10 @@
 	</section>
 	<div class="container">Новая доска
 		<div class="row">
-			<div class="col-1-large">
+			<div class="col">
 				<h2>Задачи</h2>
-				<table class="fa-table">
-					<thead class="fa-table-tennis">
+				<table class="table">
+					<thead class="table">
 					<tr>
 						<th scope="col">Название</th>
 						<th scope="col">Статус</th>
