--- a/Mandatum/UI/Views/Board/CreateBoard.cshtml
+++ b/Mandatum/UI/Views/Board/CreateBoard.cshtml
@@ -49,7 +49,7 @@
 		
 		<div class="row aln-center">
         	<div class="actions">
-        		<a href="@Url.Action("NewBoard", "Board")" class="button style1">Создать доску</a>
+        		<a href="@Url.Action("KanbanBoard", "Board")" class="button style1">Создать доску</a>
         	</div>
         </div>
 	</section>
