--- a/Mandatum/UI/Views/Board/CreateTask.cshtml
+++ b/Mandatum/UI/Views/Board/CreateTask.cshtml
@@ -18,49 +18,42 @@
                     @if (ViewBag.Method == "CreateTask")
                     {
                         <input type="hidden" asp-for="Id" value="0" />
-                        
-                        <div class="form-group">
-                            <label>Имя</label>
-                            <div><span asp-validation-for="Topic"></span></div>
-                            <input asp-for="Topic" class="form-control" type="text" placeholder="Задача">
-                        </div>
-                    
-                        <div class="form-group">
-                            <label>Статус</label>
-                            <div><span asp-validation-for="Status"></span></div>
-                            <input asp-for="Status" class="form-control" type="text" placeholder="Статус">
-                        </div>
-                    
-                        <div class="form-group">
-                            <label>Описание</label>
-                            <div><span asp-validation-for="Description"></span></div>
-                            <textarea asp-for="Description" class="form-control" rows="3"></textarea>
-                        </div>
-    
                     }
                     else if (ViewBag.Method == "EditTask")
                     {
                         <input type="hidden" asp-for="Id" value="@Model.Id" />
-                        <div class="form-group">
-                            <label>Имя</label>
-                            <div><span asp-validation-for="Topic"></span></div>
-                            <input asp-for="Topic" class="form-control" type="text" placeholder="Задача">
-                        </div>
-                    
-                        <div class="form-group">
-                            <label>Статус</label>
-                            <div><span asp-validation-for="Status"></span></div>
-                            <input asp-for="Status" class="form-control" type="text" placeholder="Статус">
-                        </div>
-                    
-                        <div class="form-group">
-                            <label>Описание</label>
-                            <div><span asp-validation-for="Description"></span></div>
-                            <textarea asp-for="Description" class="form-control" rows="3"></textarea>
-                        </div>
-    
                     }
-    
+                     <div class="form-group">
+                        <label>Имя</label>
+                        <div><span asp-validation-for="Topic"></span></div>
+                        <input asp-for="Topic" class="form-control" type="text" placeholder="Задача">
+                    </div>
+                
+                    <div class="form-group">
+	                    <label>Статус</label>
+	                    <div>
+		                    <input asp-for="Status" type="radio" name="status" id="inWait" checked>
+		                    <label for="inWait">Не начато</label>
+	                    </div>
+	                    <div>
+		                    <input asp-for="Status" type="radio" name="status" id="inProgress">
+		                    <label for="inProgress">В процессе</label>
+	                    </div>
+	                     <div>
+                            <input asp-for="Status" type="radio" name="status" id="done">
+                            <label for="done">Готово</label>
+                        </div>
+	                    
+	                    @* <div><span asp-validation-for="Status"></span></div> *@
+                     @*    <input asp-for="Status" class="form-control" type="text" placeholder="Статус"> *@
+                    </div>
+                 
+                    <div class="form-group">
+                        <label>Описание</label>
+                        <div><span asp-validation-for="Description"></span></div>
+                        <textarea asp-for="Description" class="form-control" rows="3"></textarea>
+                    </div>
+        
                 
                     <br>
     
