--- a/Mandatum/UI/Views/Board/EditTask.cshtml
+++ b/Mandatum/UI/Views/Board/EditTask.cshtml
@@ -15,14 +15,14 @@
         <div class="row aln-center">
             
                 <form asp-action="SaveTask" method="post" enctype="multipart/form-data" class="p-2">
-                 
-	                 <input type="hidden" asp-for="Id" value="0" />
                    
+                    <input type="hidden" asp-for="Id" value="@Model.Id" />
+                    
                      <div class="form-group">
                         <label>Имя</label>
                         <div><span asp-validation-for="Topic"></span></div>
-	                     <input asp-for="Topic" class="form-control" type="text" placeholder="Задача">
-					</div>
+                        <input asp-for="Topic" class="form-control" type="text" value="@Model.Topic">
+                    </div>
                 
                     <div class="form-group">
 	                    <label>Статус</label>
@@ -38,15 +38,15 @@
                             <input asp-for="Status" value="1" type="radio" name="status" id="done">
                             <label for="done">Готово</label>
                         </div>
-	                    
                     </div>
                  
                     <div class="form-group">
                         <label>Описание</label>
                         <div><span asp-validation-for="Description"></span></div>
-                        <textarea asp-for="Description" class="form-control" rows="3"></textarea>
+                        <textarea asp-for="Description" class="form-control" rows="3" value="@Model.Topic"></textarea>
                     </div>
-	                 
+        
+                
                     <br>
     
                     <button class="btn btn-primary m-2 p-2" type="submit">Сохранить</button>
