--- a/Mandatum/UI/Views/Board/CreateBoard.cshtml
+++ b/Mandatum/UI/Views/Board/CreateBoard.cshtml
@@ -8,52 +8,58 @@
 
 	<section id="main" class="wrapper style2">
 		<div class="title">Новая доска</div>
-		<div class="row aln-center">
-			<div>
-				<input type="radio" name="type" id="private" checked>
-				<label for="private">Приватная</label>
-			</div>
-		</div>
-
-		<div class="row aln-center">
-			<div>
-				<input type="radio" name="type" id="public">
-				<label for="public">Публичная</label>
-			</div>
-		</div>
-		
-		<section id="highlights" class="wrapper style2">
-			<div class="container">
-				<div class="row aln-center">
-					<div class="col-4 col-12-medium">
-						<section class="highlight">
-							<a class="image featured"><img src="/images/kanban.png" alt="Канбан доска"/></a>
-							<div>
-								<input type="radio" name="format" id="kanban" checked>
-								<label for="kanban">Канбан доска</label>
-							</div>
-						</section>
-					</div>
-					<div class="col-4 col-12-medium">
-						<section class="highlight">
-							<a class="image featured"><img src="/images/graph.png" alt="Граф"/></a>
-							<div>
-								<input type="radio" name="format" id="graph">
-								<label for="graph">Граф</label>
-							</div>
-						</section>
-					</div>
-				</div>
-			</div>
-			<br>
+		<div class="container">
 			<div class="row aln-center">
-                <div class="actions">
-                    <a href="@Url.Action("KanbanBoard", "Board")" class="button style1">Создать доску</a>
-                </div>
-            </div>
-		</section>
-		
-	
+				<form asp-action="SaveBoard" method="post" enctype="multipart/form-data" class="p-2">
+					@* <input type="hidden" asp-for="Id" value="0"> *@
+					
+					<div class="form-group">
+						<div class="row aln-center">
+							@* <input asp-for="Privacy" value="1" type="radio" name="privacy" id="private" checked> *@
+							<input value="1" type="radio" name="privacy" id="private" checked><label for="private">Приватная</label>
+						</div>
+						<div class="row aln-center">
+                        	@* <input asp-for="Privacy" value="0" type="radio" name="privacy" id="public"> *@
+                            <input value="0" type="radio" name="privacy" id="public"><label for="public">Публичная</label>
+                        </div>
+					</div>
+					<div class="form-group">
+						<section id="highlights" class="wrapper style2">
+							<div class="container">
+								<div class="row aln-center">
+									<div class="col-4 col-12-medium">
+										<section class="highlight">
+											<a class="image featured"><img src="/images/kanban.png" alt="Канбан доска"/></a>
+											<div>
+												@* <input asp-for="Format" value="0" type="radio" name="format" id="kanban" checked> *@
+												<input value="0" type="radio" name="format" id="kanban" checked>
+												<label for="kanban">Канбан доска</label>
+											</div>
+										</section>
+									</div>
+									<div class="col-4 col-12-medium">
+										<section class="highlight">
+											<a class="image featured"><img src="/images/graph.png" alt="Граф"/></a>
+											<div>
+												@* <input asp-for="Format" value="1" type="radio" name="format" id="graph"> *@
+												<input value="1" type="radio" name="format" id="graph">
+												<label for="graph">Граф</label>
+											</div>
+										</section>
+									</div>
+								</div>
+							</div>
+						</section>
+					</div>
+					<br>
+					<br>
+					<div class="row aln-center">
+						<button class="button" type="submit">Создать доску</button>
+					</div>
+					 
+				</form>
+			</div>
+		</div>
 	</section>
 	
 	
