--- a/Mandatum/UI/Views/Account/Login.cshtml
+++ b/Mandatum/UI/Views/Account/Login.cshtml
@@ -1,44 +1,44 @@
-﻿@model Mandatum.ViewModels.LoginModel
- 
-
-<div id="page-wrapper">
-    <section id="header" class="wrapper">
-        @await Html.PartialAsync("NavBarPartial")
-    </section>
-    
-    <section id="main" class="wrapper style2">
-        <div class="title">Вход</div>
-        
-        <div class="container">
-            <div class="row aln-center">
-                
-                <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
-                    <div class="validation" asp-validation-summary="ModelOnly"></div>
-                <div>
-                    <div class="form-group">
-                        <label asp-for="Email">Введите Email</label>
-                        <input type="text" asp-for="Email"/>
-                        <span asp-validation-for="Email"/>
-                    </div>
-                    <div class="form-group">
-                        <label asp-for="Password">Введите пароль</label>
-                        <input asp-for="Password"/>
-                        <span asp-validation-for="Password"/>
-                    </div>
-                    <div>
-                        <label> </label>
-                        <input type="submit" value="Войти в аккаунт" class="btn btn-outline-dark"/>
-                    </div>
-                        <label>или</label>
-                        <a asp-action="Register" asp-controller="Account">Зарегестрироваться</a>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </section>
-</div>
-
-
-
-
-   
+﻿@* @model Mandatum.ViewModels.LoginModel *@
+@*   *@
+@* *@
+@* <div id="page-wrapper"> *@
+@*     <section id="header" class="wrapper"> *@
+@*         @await Html.PartialAsync("NavBarPartial") *@
+@*     </section> *@
+@*      *@
+@*     <section id="main" class="wrapper style2"> *@
+@*         <div class="title">Вход</div> *@
+@*          *@
+@*         <div class="container"> *@
+@*             <div class="row aln-center"> *@
+@*                  *@
+@*                 <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true"> *@
+@*                     <div class="validation" asp-validation-summary="ModelOnly"></div> *@
+@*                 <div> *@
+@*                     <div class="form-group"> *@
+@*                         <label asp-for="Email">Введите Email</label> *@
+@*                         <input type="text" asp-for="Email"/> *@
+@*                         <span asp-validation-for="Email"/> *@
+@*                     </div> *@
+@*                     <div class="form-group"> *@
+@*                         <label asp-for="Password">Введите пароль</label> *@
+@*                         <input asp-for="Password"/> *@
+@*                         <span asp-validation-for="Password"/> *@
+@*                     </div> *@
+@*                     <div> *@
+@*                         <label> </label> *@
+@*                         <input type="submit" value="Войти в аккаунт" class="btn btn-outline-dark"/> *@
+@*                     </div> *@
+@*                         <label>или</label> *@
+@*                         <a asp-action="Register" asp-controller="Account">Зарегестрироваться</a> *@
+@*                     </div> *@
+@*                 </form> *@
+@*             </div> *@
+@*         </div> *@
+@*     </section> *@
+@* </div> *@
+@* *@
+@* *@
+@* *@
+@* *@
+@*     *@
