--- a/Mandatum/UI/Views/Home/Index.cshtml
+++ b/Mandatum/UI/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
     <div id="main" class="wrapper style2">
         <div class="row aln-center">
             <div class="actions">
-                <a href="@Url.Action("Login", "Account")" class="button style1">Начать</a>
+                <a href="@Url.Action("Register", "Account")" class="button style1">Начать</a>
             </div>
         </div>
     </div>
