--- a/Mandatum/UI/Views/Account/Login.cshtml
+++ b/Mandatum/UI/Views/Account/Login.cshtml
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="row aln-center">
                 
-                <form asp-action="Login" asp-controller="Account" asp-anti-forgery="true">
+                <form asp-action="Register" asp-controller="Account" asp-anti-forgery="true">
                     <div class="validation" asp-validation-summary="ModelOnly"></div>
                 <div>
                     <div class="form-group">
