--- a/Mandatum/UI/Views/Board/CreateBoard.cshtml
+++ b/Mandatum/UI/Views/Board/CreateBoard.cshtml
@@ -1,4 +1,5 @@
 ﻿<!DOCTYPE HTML>
+@model BoardModel
 
 <div id="page-wrapper">
 	
@@ -15,13 +16,17 @@
 					
 					<div class="form-group">
 						<div class="row aln-center">
-							@* <input asp-for="Privacy" value="1" type="radio" name="privacy" id="private" checked> *@
-							<input value="1" type="radio" name="privacy" id="private" checked><label for="private">Приватная</label>
+							<div>
+							<input asp-for="Privacy" value="1" type="radio" name="privacy" id="private" checked>
+							<label for="private">Приватная</label>
+							</div>
 						</div>
 						<div class="row aln-center">
-                        	@* <input asp-for="Privacy" value="0" type="radio" name="privacy" id="public"> *@
-                            <input value="0" type="radio" name="privacy" id="public"><label for="public">Публичная</label>
-                        </div>
+							<div>
+							<input asp-for="Privacy" value="0" type="radio" name="privacy" id="public">
+							<label for="public">Публичная</label>
+							</div>
+						</div>
 					</div>
 					<div class="form-group">
 						<section id="highlights" class="wrapper style2">
@@ -31,8 +36,7 @@
 										<section class="highlight">
 											<a class="image featured"><img src="/images/kanban.png" alt="Канбан доска"/></a>
 											<div>
-												@* <input asp-for="Format" value="0" type="radio" name="format" id="kanban" checked> *@
-												<input value="0" type="radio" name="format" id="kanban" checked>
+												<input asp-for="Format" value="0" type="radio" name="format" id="kanban" checked>
 												<label for="kanban">Канбан доска</label>
 											</div>
 										</section>
@@ -41,9 +45,8 @@
 										<section class="highlight">
 											<a class="image featured"><img src="/images/graph.png" alt="Граф"/></a>
 											<div>
-												@* <input asp-for="Format" value="1" type="radio" name="format" id="graph"> *@
-												<input value="1" type="radio" name="format" id="graph">
-												<label for="graph">Граф</label>
+												 <input asp-for="Format" value="1" type="radio" name="format" id="graph">
+												 <label for="graph">Граф</label>
 											</div>
 										</section>
 									</div>
